[gd_scene load_steps=13 format=2]

[ext_resource path="res://Art/pink piece.png" type="Texture" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Art/board with question marks.png" type="Texture" id=3]
[ext_resource path="res://dice.tscn" type="PackedScene" id=4]
[ext_resource path="res://spot.tscn" type="PackedScene" id=5]
[ext_resource path="res://Question Boxes/question_box2.tscn" type="PackedScene" id=6]
[ext_resource path="res://Question Boxes/questionbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://DefaultTheme.tres" type="Theme" id=8]
[ext_resource path="res://Art/blue piece.png" type="Texture" id=9]
[ext_resource path="res://piece.gd" type="Script" id=10]
[ext_resource path="res://TurnLabel.tscn" type="PackedScene" id=11]
[ext_resource path="res://winner_screen.tscn" type="PackedScene" id=12]

[node name="Main" type="Node2D"]
script = ExtResource( 2 )
game_spaces_paths = [ NodePath("Spots/Start"), NodePath("Spots/Start2"), NodePath("Spots/Start3"), NodePath("Spots/Start4"), NodePath("Spots/Start5"), NodePath("Spots/Start6"), NodePath("Spots/Start7"), NodePath("Spots/Start8"), NodePath("Spots/Start9"), NodePath("Spots/Start10"), NodePath("Spots/Start11"), NodePath("Spots/Start12"), NodePath("Spots/Start13"), NodePath("Spots/Start14"), NodePath("Spots/Start15"), NodePath("Spots/Start16"), NodePath("Spots/Start17"), NodePath("Spots/Start18"), NodePath("Spots/Start19") ]
question_boxes = [ ExtResource( 7 ), ExtResource( 6 ) ]

[node name="Board" type="Sprite" parent="."]
position = Vector2( 320, 184 )
texture = ExtResource( 3 )

[node name="PinkPiece" type="Sprite" parent="."]
position = Vector2( 64, 144 )
scale = Vector2( 1.39307, 1.39355 )
texture = ExtResource( 1 )
script = ExtResource( 10 )
place = 1

[node name="BluePiece" type="Sprite" parent="."]
position = Vector2( 64, 176 )
scale = Vector2( 1.34375, 1.40625 )
texture = ExtResource( 9 )
script = ExtResource( 10 )
place = 1

[node name="Spots" type="Node" parent="."]

[node name="Start" parent="Spots" instance=ExtResource( 5 )]

[node name="Start2" parent="Spots" instance=ExtResource( 5 )]
position = Vector2( 128, 160 )

[node name="Start3" parent="Spots" instance=ExtResource( 5 )]
position = Vector2( 192, 160 )

[node name="Start4" parent="Spots" instance=ExtResource( 5 )]
position = Vector2( 256, 160 )

[node name="Start5" parent="Spots" instance=ExtResource( 5 )]
position = Vector2( 320, 160 )

[node name="Start6" parent="Spots" instance=ExtResource( 5 )]
position = Vector2( 384, 160 )
direction = 2

[node name="Start7" parent="Spots" instance=ExtResource( 5 )]
position = Vector2( 448, 160 )
direction = 3

[node name="Start8" parent="Spots" instance=ExtResource( 5 )]
position = Vector2( 512, 160 )

[node name="Start9" parent="Spots" instance=ExtResource( 5 )]
position = Vector2( 576, 160 )

[node name="Start10" parent="Spots" instance=ExtResource( 5 )]
position = Vector2( 576, 224 )

[node name="Start11" parent="Spots" instance=ExtResource( 5 )]
position = Vector2( 576, 288 )

[node name="Start12" parent="Spots" instance=ExtResource( 5 )]
position = Vector2( 512, 288 )
direction = 1

[node name="Start13" parent="Spots" instance=ExtResource( 5 )]
position = Vector2( 448, 288 )
direction = 3

[node name="Start14" parent="Spots" instance=ExtResource( 5 )]
position = Vector2( 384, 288 )

[node name="Start15" parent="Spots" instance=ExtResource( 5 )]
position = Vector2( 320, 288 )

[node name="Start16" parent="Spots" instance=ExtResource( 5 )]
position = Vector2( 256, 288 )

[node name="Start17" parent="Spots" instance=ExtResource( 5 )]
position = Vector2( 192, 288 )

[node name="Start18" parent="Spots" instance=ExtResource( 5 )]
position = Vector2( 128, 288 )

[node name="Start19" parent="Spots" instance=ExtResource( 5 )]
position = Vector2( 64, 288 )

[node name="Dice" parent="." instance=ExtResource( 4 )]
position = Vector2( 512, 51 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Score" type="Label" parent="CanvasLayer"]
margin_left = 28.0
margin_top = 26.0
margin_right = 144.0
margin_bottom = 93.0
theme = ExtResource( 8 )
text = "Pink: 0
Blue: 0"

[node name="TurnLabel" parent="CanvasLayer" instance=ExtResource( 11 )]
visible = false
margin_left = 235.0
margin_top = 36.0
margin_right = 403.0
margin_bottom = 72.0

[node name="Winner Screen" parent="CanvasLayer" instance=ExtResource( 12 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -146.0
margin_top = -45.5
margin_right = 146.0
margin_bottom = 45.5

[connection signal="dice_has_rolled" from="Dice" to="." method="_on_dice_dice_has_rolled"]
